syntax = "proto3";

service TicketService {
    rpc suggestOriginDestination(Name) returns (OriginDestinationList) {}
    rpc getNews(Empty) returns (NewsList) {}
    rpc searchFlights(SearchParams) returns (FlightList) {}
    rpc createTicket(TicketForm) returns (Ticket) {}
    rpc parchase(TransactionParams) returns (Ticket) {}
    rpc getUsersTickets(UserId) returns (TicketList) {}
}

message Empty {}

message UserId {
    string user_id = 1;
}

message TicketForm {
    string user_id = 1;
    string flight_id = 2;
    string class_name = 3;
    repeated Passenger passengers = 4;
}

message TransactionParams {
    string tracking_code = 1;
    string status = 2;
}

message OriginDestinationList {
    repeated OriginDestination list = 1;
}

message FlightList {
    repeated Flight list = 1;
}

message TicketList {
    repeated Ticket list = 1;
}

message NewsList {
    repeated News list = 1;
}

message SearchParams {
    string origin = 1;
    string destination = 2;
    uint64 departure_time = 3;
    uint64 return_time = 4;
    uint32 number_of_passengers = 5;
}

message Name {
    string name = 1;
}

message OriginDestination {
    string county = 1;
    string city = 2;
    string airport = 3;
    string iata = 4;
}

message Flight {
    string flight_id = 1;
    string origin = 2;
    string destination = 3;
    Duration duration = 4;
    uint32 y_price = 5;
    uint32 j_price = 6;
    uint32 f_price = 7;
    uint32 y_class_free_capacity = 8;
    uint32 j_class_free_capacity = 9;
    uint32 f_class_free_capacity = 10;
    bool y_is_limited_capacity = 11;
    bool j_is_limited_capacity = 12;
    bool f_is_limited_capacity = 13;
    string equipment = 14;
    uint64 departure_local_time = 15;
    uint64 arrival_local_time = 16;
}

message FlightClass {
    string flight_id = 1;
    string origin = 2;
    string destination = 3;
    Duration duration = 4;
    uint32 price = 5;
    uint32 free_capacity = 6;
    bool is_limited_capacity = 7;
    string equipment = 8;
    uint64 departure_local_time = 9;
    uint64 arrival_local_time = 10;
    string class_name = 11;
}

message Duration {
    uint32 hours = 1;
    uint32 minutes = 2;
    uint32 seconds = 3;
}

message Ticket {
    uint32 transaction_id = 1;
    FlightClass flight = 2;
    repeated Passenger passengers = 3;
    string payment_url = 4;
}

message Passenger {
    string name = 1;
    string family = 2;
    string passport = 3;
}

message News {
    string title = 1;
    string image_url = 2;
    string redirect_url = 3;
}